remove injection madness